# ShoeApi

./: Application.hs  Foundation.hs  Import.hs  Model.hs  README  Settings.hs  ShoeApi.cabal  client_session_key.aes  devel.hs
DataStructures/: Shoes.hs
Handler/: DisplayShoe.hs  ListShoes.hs  UploadPic.hs
Settings/: Development.hs
app/: main.hs
config/: models  routes  sqlite.yml
demo_client/: demo_client.hs
messages/: en.msg
mighttpd_conf/: example.conf  example.route
templates/: display_shoe.hamlet  list_shoes.hamlet
